cron overview in admin (only superadmin is able to run/enable/disbale modules)
- see https://github.com/shopsys/shopsys/pull/1407
- MallProductDeleteCronModule outcommented
- ProductExportCronModule rescheduled to be run only once a day (ProductExportChangedCronModule is run every 5 minutes)

--- a/config/parameters_common.yml
+++ b/config/parameters_common.yml
@@ -55,3 +55,4 @@ parameters:
     securityBcryptCost: 12
     # All time values are displayed in this timezone (default is PHP timezone)
     shopsys.display_timezone: Europe/Prague
+    shopsys.display_cron_overview_for_superadmin_only: false
