--- a/config/services_test.yml
+++ b/config/services_test.yml
@@ -1,6 +1,9 @@
 imports:
     - { resource: parameters_test.yml }
 
+framework:
+    test: true
+
 services:
     _defaults:
         autowire: true
