--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.3.0",
         "doctrine/persistence": "~1.2.0",
         "dompdf/dompdf": "^0.8.5",
-        "elasticsearch/elasticsearch": "v7.5.0 as 6.0.1",
+        "elasticsearch/elasticsearch": "^7.6.1",
         "emanueleminotto/twig-cache-bundle": "^1.0",
         "fp/jsformvalidator-bundle": "1.5.x-dev",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
@@ -87,7 +87,6 @@
         "shopsys/doctrine-orm": "^2.6.2",
         "shopsys/form-types-bundle": "9.0.x-dev",
         "shopsys/framework": "9.0.x-dev",
-        "shopsys/frontend-api": "9.0.x-dev",
         "shopsys/google-cloud-bundle": "9.0.x-dev",
         "shopsys/migrations": "9.0.x-dev",
         "shopsys/plugin-interface": "9.0.x-dev",
