Authenticator service definition: remove explicit definition of $eventDispatcher argument
- see https://github.com/shopsys/shopsys/pull/1789

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -595,3 +595,8 @@ services:
             $sitemapsUrlPrefix: '%shopsys.sitemaps_url_prefix%'
 
     App\Component\FlashMessage\ErrorExtractor: ~
+
+    # see https://github.com/shopsys/shopsys/pull/1789
+    Shopsys\FrameworkBundle\Model\Security\Authenticator:
+        arguments:
+            - '@security.token_storage'
