Changed the appearance of categories dropdown menu in header.

--- a/config/images.yml
+++ b/config/images.yml
@@ -43,6 +43,11 @@
             height: 56
             crop: false
             occurrence: 'Front-end: Product list by category'
+        -   name: dropdown
+            width: 80
+            height: 80
+            crop: false
+            occurrence: 'Dropdown menu in header'
 
 -   name: product
     class: Shopsys\FrameworkBundle\Model\Product\Product
