exclude var folder from yaml standards checks

--- a/yaml-standards.yaml
+++ b/yaml-standards.yaml
@@ -1,6 +1,7 @@
 -   pathsToCheck:
         - .
     excludedPaths:
+        - ./var
         - ./vendor
         - ./node_modules
         - ./config/domains_urls.yml
