--- a/config/services.yaml
+++ b/config/services.yaml
@@ -471,6 +471,11 @@ services:
 
     Shopsys\FrameworkBundle\Component\Log\SlowLogSubscriber: '@App\Component\Log\SlowLogSubscriber'
 
+    Shopsys\FrameworkBundle\Model\Security\LoginListener:
+        class: App\Model\Security\LoginListener
+        tags:
+            - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
+
     Shopsys\FrameworkBundle\Model\Order\Item\OrderItemFacade: '@App\Model\Order\Item\OrderItemFacade'
 
     App\Model\Order\Mail\OrderMail: ~
