Added sale property to flags. Added type to categories. Products are now automatically assigned to sale type categories when they get sale flag and removed from those categories when they lose sale flag. Sale category is automatically hidden when if it contains no products.

--- a/config/forms.yml
+++ b/config/forms.yml
@@ -83,3 +83,7 @@ services:
     App\Form\Admin\VatFormTypeExtension:
         tags:
             - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Vat\VatFormType }
+
+    App\Form\Admin\FlagFormTypeExtension:
+        tags:
+            - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Product\Flag\FlagFormType }
