--- a/config/services.yaml
+++ b/config/services.yaml
@@ -610,3 +610,4 @@ services:
             $s3ApiPassword: '%env(S3_API_PASSWORD)%'
             $s3ApiBucketName: '%env(S3_API_BUCKET_NAME)%'
 
+    Shopsys\FrameworkBundle\Model\Product\Flag\FlagDataFactoryInterface: '@App\Model\Product\Flag\FlagDataFactory'
