FE: "OrderDiscountLevel" in Cart, OrderPreview, and Order
- OrderDiscountLevel is activated automatically if the resulting discount is better for the user than the used promo code (type "promo code")
- it IS NOT possible to combine promo code (type "promo code") and order discout level
	-> it IS NOT possible to add promo code when there is already active OrderDiscountLevel with better discount
- it IS possible to combine OrderDiscountLevel with promo code with type "gift certificate"
- OrderPreviewCalculation refactored a little bit
	- removed useless extension of calculateTotalPrice() method
	- methods for discount calculation moved to QuantifiedProductDiscountCalculation class and new OrderDiscountCalculation class
- PromoCode: added helper methods for the type recognition
- when the order is finished, the active order level discount ID is removed from the session
- OrderFacadeEditTest: fix order items ids (because of newly applied order discount levels) and remove order discount item from the tested order
	- with the applied discount, after modifying the prices manually in tests, the resulting prices are negative and it is not worth modifying the demo data because of that
- OrderFacadeTest: fix asserted order items counts as the order now contain order discount level items, too

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -328,6 +328,10 @@ services:
 
     Shopsys\FrameworkBundle\Model\Order\Preview\OrderPreviewFactory: '@App\Model\Order\Preview\OrderPreviewFactory'
 
+    App\Model\Order\Preview\OrderPreviewCalculation:
+        arguments:
+            $flashMessageSender: '@shopsys.shop.component.flash_message.sender.front'
+
     Shopsys\FrameworkBundle\Model\Order\Preview\OrderPreviewCalculation: '@App\Model\Order\Preview\OrderPreviewCalculation'
 
     Shopsys\FrameworkBundle\Model\Product\Pricing\QuantifiedProductDiscountCalculation: '@App\Model\Product\Pricing\QuantifiedProductDiscountCalculation'
@@ -602,5 +606,3 @@ services:
     Shopsys\FrameworkBundle\Component\Domain\DomainDataCreator: '@App\Component\Domain\DomainDataCreator'
 
     Shopsys\FrameworkBundle\Model\Pricing\Vat\VatGridFactory: '@App\Model\Pricing\Vat\VatGridFactory'
-
-
