--- a/config/parameters.yml.dist
+++ b/config/parameters.yml.dist
@@ -90,3 +90,9 @@ parameters:
     smsManagerApiKey: 3e17f29771088c3e8bd74b78f040c4aad4e9a3e5
 
     disable_form_fields_from_transfer: false
+
+    pohoda_company_ico: 25415981
+    pohoda_mserver_url: http://46.234.124.195
+    pohoda_mserver_port: 4444
+    pohoda_mserver_login: false
+    pohoda_mserver_password: false
