--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -118,3 +118,7 @@ services:
     Shopsys\FrameworkBundle\Component\Error\ErrorPageCronModule:
         tags:
             - { name: shopsys.cron, hours: '21', minutes: '10', readableName: 'Vygenerování chybových stránek' }
+
+    App\Model\Order\Transfer\OrderExportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*' }
