Cloud: run security-check only when composer is changed

--- a/gitlab/gitlab-ci.yml
+++ b/gitlab/gitlab-ci.yml
@@ -151,3 +151,17 @@ repository:clean:
     script:
         - ./gitlab/scripts/repository-clean.sh
 
+security:check:
+    stage: service
+    tags:
+        - docker
+    needs:
+        - build
+    only:
+        refs:
+            - master
+    except:
+        - schedules
+    script:
+        - docker run -i ${TAG} composer security-check
+
