--- a/composer.json
+++ b/composer.json
@@ -161,9 +161,9 @@
         "auto-scripts": {
             "shopsys:domains-urls:configure": "symfony-cmd",
             "ckeditor:install --clear=skip --release=full --tag=4.5.11": "symfony-cmd",
-            "cache:clear --no-warmup": "symfony-cmd",
-            "security-checker security:check": "script"
-        }
+            "cache:clear --no-warmup": "symfony-cmd"
+        },
+        "security-check": "security-checker security:check"
     },
     "config": {
         "preferred-install": "dist",
