add FlashMessageSender so it is possible to create flash messages outside the controllers
- see https://github.com/shopsys/shopsys/issues/1813

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -327,10 +327,6 @@ services:
 
     Shopsys\FrameworkBundle\Model\Order\Preview\OrderPreviewFactory: '@App\Model\Order\Preview\OrderPreviewFactory'
 
-    App\Model\Order\Preview\OrderPreviewCalculation:
-        arguments:
-            $flashMessageSender: '@shopsys.shop.component.flash_message.sender.front'
-
     Shopsys\FrameworkBundle\Model\Order\Preview\OrderPreviewCalculation: '@App\Model\Order\Preview\OrderPreviewCalculation'
 
     Shopsys\FrameworkBundle\Model\Product\Pricing\QuantifiedProductDiscountCalculation: '@App\Model\Product\Pricing\QuantifiedProductDiscountCalculation'
@@ -600,3 +596,5 @@ services:
     Shopsys\FrameworkBundle\Model\Security\Authenticator:
         arguments:
             - '@security.token_storage'
+
+    App\Component\FlashMessage\FlashMessageSender: ~
