recalculate sale category visibility after data fixtures are loaded

--- a/config/services/commands.yml
+++ b/config/services/commands.yml
@@ -17,3 +17,5 @@ services:
         arguments:
             - '%shopsys.entity_extension.map%'
             - '%shopsys.framework.root_dir%'
+
+    Shopsys\FrameworkBundle\Command\RecalculationsCommand: '@App\Command\RecalculationsCommand'
