Removed parametric filters from sale categories. Changed category order in header menu so that sale categories are always shown as last.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -611,3 +611,5 @@ services:
             $s3ApiBucketName: '%env(S3_API_BUCKET_NAME)%'
 
     Shopsys\FrameworkBundle\Model\Product\Flag\FlagDataFactoryInterface: '@App\Model\Product\Flag\FlagDataFactory'
+
+    Shopsys\FrameworkBundle\Model\Product\Filter\ProductFilterConfigFactory: '@App\Model\Product\Filter\ProductFilterConfigFactory'
