--- a/config/services.yaml
+++ b/config/services.yaml
@@ -538,6 +538,8 @@ services:
 
     Shopsys\FrameworkBundle\Model\Product\Availability\ProductAvailabilityCalculation: '@App\Model\Product\Availability\ProductAvailabilityCalculation'
 
+    Shopsys\FrameworkBundle\Model\Product\ProductSellingDeniedRecalculator: '@App\Model\Product\ProductSellingDeniedRecalculator'
+
     App\Component\Transfer\Pohoda\Product\PohodaProductExportFacade:
         arguments:
             $logger: '@monolog.logger.cron'
