FE cart & order: product items in sale stocks are preferred over items in the other stocks
- if a product is available in any sale stock, sale price is used instead of the regular price
- if more than available sale stock quantity is added into the cart, the product is split into two items in cart (and also in the order):
	- 1) sale item (using sale price) with all the available sale stock quantity
	- 2) non-sale item (using regular price according to the current pricing group) with the remaining quantity
- CartFacade::addProductToCart() marked as deprecated and replaced by addProduct() that uses new private addProductItemsToCart()
	- addProduct() returns an array of AddProductResult instances as it is possible to add/change two items (sale and non-sale) during one method call (i.e. during one addition to cart)
- new $saleItem boolean property added to CartItem, QuantifiedProduct, and OrderItem
- extended CartWatcher::getModifiedPriceItemsAndUpdatePrices() so it is now able to distinguish sale and non-sale cart items
- max values of quantity spinboxes in cart are now taken from real available quantities in sale/non-sale stocks for the corresponding items
- Product::subtractStockQuantity() now takes sale items into account
	- (non-)sale items are subtracted from (non-)sale stocks exclusively
- ProductDataFixture: product with ID 4 has now lower sale price and exact store stock quantities for easier manual testing
	- it is also used in new functional tests (in CartFacadeTest and OrderFacadeTest)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -615,3 +615,9 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Filter\ProductFilterConfigFactory: '@App\Model\Product\Filter\ProductFilterConfigFactory'
 
     Shopsys\FrameworkBundle\Model\Product\ProductSellingDeniedRecalculator: '@App\Model\Product\ProductSellingDeniedRecalculator'
+
+    App\Model\Cart\CartWatcher\CartWatcher: ~
+
+    Shopsys\FrameworkBundle\Model\Cart\Watcher\CartWatcher: '@App\Model\Cart\CartWatcher\CartWatcher'
+
+    Shopsys\FrameworkBundle\Model\Order\Item\OrderProductFacade: '@App\Model\Order\Item\OrderProductFacade'
