unified config files extension to yaml
- see https://github.com/shopsys/shopsys/pull/1814

--- a/config/.gitignore
+++ b/config/.gitignore
@@ -1,4 +1,4 @@
-domains_urls.yml
-parameters.yml
-parameters_test.yml
-parameters_version.yml
+domains_urls.yaml
+parameters.yaml
+parameters_test.yaml
+parameters_version.yaml
