--- a/config/paths.yaml
+++ b/config/paths.yaml
@@ -3,10 +3,10 @@ parameters:
     shopsys.css_version_filepath: '%shopsys.web_dir%/assets/cssVersion'
     shopsys.data_fixtures.resources_dir: '%shopsys.root_dir%/src/DataFixtures/resources'
     shopsys.default_db_schema_filepath: '%shopsys.framework.resources_dir%/database/schema.sql'
-    shopsys.domain_config_filepath: '%shopsys.root_dir%/config/domains.yml'
+    shopsys.domain_config_filepath: '%shopsys.root_dir%/config/domains.yaml'
     shopsys.domain_images_dir: '/web%shopsys.domain_images_url_prefix%'
     shopsys.domain_images_url_prefix: '/%shopsys.content_dir_name%/admin/images/domain'
-    shopsys.domain_urls_config_filepath: '%shopsys.root_dir%/config/domains_urls.yml'
+    shopsys.domain_urls_config_filepath: '%shopsys.root_dir%/config/domains_urls.yaml'
     shopsys.error_pages_dir: '%shopsys.root_dir%/var/errorPages/'
     shopsys.feed_dir: '/web%shopsys.feed_url_prefix%'
     shopsys.feed_url_prefix: '/%shopsys.content_dir_name%/feeds/'
@@ -14,7 +14,7 @@ parameters:
     shopsys.filemanager_upload_web_dir: '%shopsys.content_dir_name%/wysiwyg'
     shopsys.framework.root_dir: '%shopsys.root_dir%/vendor/shopsys/framework'
     shopsys.front_design_image_url_prefix: /public/frontend/images/
-    shopsys.image_config_filepath: '%shopsys.root_dir%/config/images.yml'
+    shopsys.image_config_filepath: '%shopsys.root_dir%/config/images.yaml'
     shopsys.image_dir: '/web%shopsys.image_url_prefix%'
     shopsys.image_url_prefix: '/%shopsys.content_dir_name%/images/'
     shopsys.javascript_sources_dir: '%shopsys.resources_dir%/scripts'
@@ -24,7 +24,7 @@ parameters:
     shopsys.root_dir: '%kernel.root_dir%/..'
     shopsys.sitemaps_dir: '/web%shopsys.sitemaps_url_prefix%'
     shopsys.sitemaps_url_prefix: '/%shopsys.content_dir_name%/sitemaps'
-    shopsys.uploaded_file_config_filepath: '%shopsys.root_dir%/config/uploaded_files.yml'
+    shopsys.uploaded_file_config_filepath: '%shopsys.root_dir%/config/uploaded_files.yaml'
     shopsys.uploaded_file_dir: '/web%shopsys.uploaded_file_url_prefix%'
     shopsys.uploaded_file_url_prefix: '/%shopsys.content_dir_name%/uploadedFiles/'
     shopsys.web_dir: '%shopsys.root_dir%/web'
