--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,10 +1,10 @@
 imports:
-    - { resource: services/*.yml }
-    - { resource: forms.yml }
-    - { resource: paths.yml }
-    - { resource: parameters_common.yml }
-    - { resource: parameters.yml }
-    - { resource: directories.yml }
+    - { resource: services/*.yaml }
+    - { resource: forms.yaml }
+    - { resource: paths.yaml }
+    - { resource: parameters_common.yaml }
+    - { resource: parameters.yaml }
+    - { resource: directories.yaml }
 
 services:
     _defaults:
