--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -39,7 +39,7 @@ server {
 
         location ~ ^/content(-test)?/images/ {
             # Newly uploaded images get new ID (different URL) so they could be cached forever.
-            # But change of resolution in images.yml does not induce a change of URL
+            # But change of resolution in images.yaml does not induce a change of URL
             # so it is safer to cache generated images only for few days.
             expires 1w;
 
