--- a/yaml-standards.yaml
+++ b/yaml-standards.yaml
@@ -4,8 +4,8 @@
         - ./var
         - ./vendor
         - ./node_modules
-        - ./config/domains_urls.yml
-        - ./config/oauth2/parameters_oauth.yml.dist
+        - ./config/domains_urls.yaml
+        - ./config/oauth2/parameters_oauth.yaml.dist
     checkers:
         -   pathToChecker: YamlStandards\Model\YamlIndent\YamlIndentChecker
             parameters:
