--- a/composer.json
+++ b/composer.json
@@ -155,9 +155,9 @@
             "@auto-scripts"
         ],
         "auto-scripts": {
+            "php phing clean": "script",
             "shopsys:domains-urls:configure": "symfony-cmd",
-            "ckeditor:install --clear=skip --release=full --tag=4.5.11": "symfony-cmd",
-            "cache:clear --no-warmup": "symfony-cmd"
+            "ckeditor:install --clear=skip --release=full --tag=4.5.11": "symfony-cmd"
         },
         "security-check": "security-checker security:check"
     },
