after product is sold out from the sale stocks (via FE order), it is marked for refresh
- added new cron that refreshes (using ProductFacade::edit() method) marked products and marks the products for export to Elasticsearch
- the cron is run every 5 minutes, right before ProductExportChangedCronModule

--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -102,6 +102,10 @@ services:
         tags:
             - { name: shopsys.cron, hours: '0', minutes: '0', readableName: 'Přepočet viditelností produktů (všechny produkty)' }
 
+    App\Model\Product\ProductRefreshCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Přeuložení označených produktů pro správný přepočet přiřazení výprodejových štítků apod.' }
+
     Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportChangedCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: "Export změněných produktů do Elasticsearch" }
