--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -97,6 +97,7 @@ parameters:
             - '*/src/Model/Gtm/Data/*'
             - '*/src/Model/Transfer/Issue/TransferIssue.php'
             - '*/src/Model/Order/Item/OrderItem.php'
+            - '*/src/Model/Product/Product.php'
 
         PHP_CodeSniffer\Standards\PSR2\Sniffs\Methods\FunctionCallSignatureSniff.Indent: ~
 
