--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -24,6 +24,7 @@ twig:
         - 'Admin/Form/blogCategoriesType.html.twig'
         - 'Admin/Form/blogCategoryCheckboxType.html.twig'
         - 'Admin/Form/youtubeVideos.html.twig'
+        - 'Admin/Form/productFlags.html.twig'
     strict_variables: true
     globals:
         globalMultipleFormSetting: '@Shopsys\FrameworkBundle\Component\Form\MultipleFormSetting'
