CartMigrationFacade: migrate sale items properly
- when new item needs to be added to the new cart, $itemToMerge->isSaleItem() is for the new item creation

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -621,3 +621,9 @@ services:
     Shopsys\FrameworkBundle\Model\Cart\Watcher\CartWatcher: '@App\Model\Cart\CartWatcher\CartWatcher'
 
     Shopsys\FrameworkBundle\Model\Order\Item\OrderProductFacade: '@App\Model\Order\Item\OrderProductFacade'
+
+    App\Model\Cart\CartMigrationFacade:
+        tags:
+            - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+
+    Shopsys\FrameworkBundle\Model\Cart\CartMigrationFacade: '@App\Model\Cart\CartMigrationFacade'
