--- a/config/services.yaml
+++ b/config/services.yaml
@@ -641,3 +641,11 @@ services:
             $pohodaMServerLogin: '%pohoda_mserver_login%'
             $pohodaMServerPassword: '%pohoda_mserver_password%'
             $pohodaCompanyIco: '%pohoda_company_ico%'
+
+    Shopsys\FrameworkBundle\Model\Product\Unit\UnitDataFactoryInterface: '@App\Model\Product\Unit\UnitDataFactory'
+
+    Shopsys\FrameworkBundle\Model\Product\Unit\UnitRepository: '@App\Model\Product\Unit\UnitRepository'
+
+    Shopsys\FrameworkBundle\Model\Product\Unit\UnitDataFactory: '@App\Model\Product\Unit\UnitDataFactory'
+
+    Shopsys\FrameworkBundle\Model\Product\Unit\UnitGridFactory: '@App\Model\Product\Unit\UnitGridFactory'
