--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -68,6 +68,7 @@ parameters:
 
         ObjectCalisthenics\Sniffs\Metrics\PropertyPerClassLimitSniff:
             - '*/src/Model/Order/Order.php'
+            - '*/src/Component/Transfer/Pohoda/Product/PohodaProduct.php'
 
         Shopsys\CodingStandards\Sniffs\ValidVariableNameSniff:
             - '*/tests/App/Functional/EntityExtension/EntityExtensionTest.php'
