[TF-80] FE: product set detail: display information about set item on click
- box tabs content is reloaded for the selected item using AJAX - i.e. long and short description, videos, files, categories, catnum, brand, warranty, and parameters
- boxTabs templete rendering extracted to the new ProductController::boxTabsAction()
- removed unused parameters from boxTabs.productTabs macro (i.e. visible, productSizeArticleId, accessories, and accessoriesHeadline)

--- a/config/routes/shopsys_front.yml
+++ b/config/routes/shopsys_front.yml
@@ -199,3 +199,10 @@ front_customer_delivery_address_delete:
     methods: [GET]
     requirements:
         deliveryAddressId: \d+
+
+front_product_box_tabs:
+    path: /product/box-tabs/{productId}
+    defaults: { _controller: App\Controller\Front\ProductController:boxTabsAction }
+    methods: [GET]
+    requirements:
+        productId: \d+
