--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -38,6 +38,7 @@ doctrine:
                         collate: Shopsys\FrameworkBundle\Component\Doctrine\CollateFunction
                         normalize: Shopsys\FrameworkBundle\Component\Doctrine\NormalizeFunction
                         field: Shopsys\FrameworkBundle\Component\Doctrine\FieldFunction
+                        MD5: App\Component\Doctrine\MD5
                 naming_strategy: doctrine.orm.naming_strategy.underscore
                 metadata_cache_driver:
                     type: service
