--- a/config/services.yaml
+++ b/config/services.yaml
@@ -643,3 +643,7 @@ services:
     Shopsys\FrameworkBundle\Component\Doctrine\SqlLoggerFacade: '@App\Component\Doctrine\SqlLoggerFacade'
 
     Shopsys\FrameworkBundle\Model\Product\Filter\FlagFilterChoiceRepository: '@App\Model\Product\Filter\FlagFilterChoiceRepository'
+
+    Google\Cloud\Translate\V2\TranslateClient:
+        arguments:
+            $config: '%google_translate_config%'
