--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -65,6 +65,7 @@ parameters:
             - '*/src/Model/Order/OrderFacade.php'
             - '*/src/Form/Admin/ProductFormTypeExtension.php'
             - '*/src/Form/Admin/PromoCodeFormTypeExtension.php'
+            - '*/src/Model/Product/ProductRepository.php'
 
         ObjectCalisthenics\Sniffs\Metrics\PropertyPerClassLimitSniff:
             - '*/src/Model/Order/Order.php'
@@ -108,6 +109,7 @@ parameters:
             - '*/src/Model/Transfer/Issue/TransferIssue.php'
 
         PHP_CodeSniffer\Standards\Generic\Sniffs\Metrics\CyclomaticComplexitySniff:
+            - '*/src/Model/Cart/CartFacade.php'
             - '*/src/Controller/Front/OrderController.php'
             - '*/src/DataFixtures/Demo/ProductDataFixture.php'
             - '*/src/Model/Product/Pricing/ProductPriceCalculation.php'
