SqlLoggerFacade: do not throw exceptions when trying to disable already disabled logging, or enable already enabled logging
- I need this to be less strict as AbstractTransferCronModule enables
and disbales sql logging in general for the cron modules, and moreover,
I need to use ProductExportSubscriber::exportScheduledRows in certain
cron modules and the function disables/enables sql logging as well

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -641,3 +641,5 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Unit\UnitDataFactory: '@App\Model\Product\Unit\UnitDataFactory'
 
     Shopsys\FrameworkBundle\Model\Product\Unit\UnitGridFactory: '@App\Model\Product\Unit\UnitGridFactory'
+
+    Shopsys\FrameworkBundle\Component\Doctrine\SqlLoggerFacade: '@App\Component\Doctrine\SqlLoggerFacade'
