images transfer: update position of an existing pohoda product image
- do not tranfer the image if it already exists and the position is the same

--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -97,6 +97,7 @@ parameters:
             - '*/src/Model/Blog/Category/BlogCategoryDomain.php'
             - '*/src/Model/Blog/Article/BlogArticleDomain.php'
             - '*/src/Model/Blog/Article/BlogArticleBlogCategoryDomain.php'
+            - '*/src/Component/Image/Image'
 
         SlevomatCodingStandard\Sniffs\Classes\UnusedPrivateElementsSniff.WriteOnlyProperty:
             - '*/src/Model/Gtm/Data/*'
