--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -6,7 +6,6 @@ twig:
         - '@ShopsysFramework/Admin/Form/colorpickerFields.html.twig'
         - '@ShopsysFramework/Admin/Form/abstractFileuploadFields.html.twig'
         - '@ShopsysFramework/Admin/Form/fileuploadFields.html.twig'
-        - '@ShopsysFramework/Admin/Form/imageuploadFields.html.twig'
         - '@ShopsysFramework/Admin/Form/priceandvattableByDomainsFields.html.twig'
         - '@ShopsysFramework/Admin/Form/orderItems.html.twig'
         - '@ShopsysFramework/Admin/Form/orderlistFields.html.twig'
@@ -25,6 +24,7 @@ twig:
         - 'Admin/Form/blogCategoryCheckboxType.html.twig'
         - 'Admin/Form/youtubeVideos.html.twig'
         - 'Admin/Form/productFlags.html.twig'
+        - 'Admin/Form/imageUploadFields.html.twig'
     strict_variables: true
     globals:
         globalMultipleFormSetting: '@Shopsys\FrameworkBundle\Component\Form\MultipleFormSetting'
