--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     },
     "preferGlobal": false,
     "devDependencies": {
-        "@babel/core": "^7.8.3",
-        "@babel/parser": "^7.7.7",
+        "@babel/core": "^7.9.0",
+        "@babel/parser": "^7.9.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-        "@babel/preset-env": "^7.8.3",
-        "@babel/traverse": "^7.7.4",
+        "@babel/preset-env": "^7.9.0",
+        "@babel/traverse": "^7.9.0",
         "@symfony/webpack-encore": "^0.28.0",
         "autoprefixer": "^9.4.4",
         "babel-jest": "^25.1.0",
@@ -46,16 +46,18 @@
         "stylelint-webpack-plugin": "^1.2.3",
         "svgo": "1.2.2",
         "webfonts-generator": "^0.4.0",
+        "webpack-livereload-plugin": "^2.3.0",
         "webpack-notifier": "^1.6.0"
     },
     "dependencies": {
-        "@shopsys/framework": "9.0.0-dev.6",
+        "@shopsys/framework": "9.0.0",
         "codemirror": "^5.49.2",
         "jquery-ui": "^1.12.1",
         "jquery-ui-touch-punch": "^0.2.3",
         "jquery.cookie": "^1.4.1",
         "magnific-popup": "^1.1.0",
         "minilazyload": "^2.3.3",
+        "nestedSortable": "^1.3.4",
         "selectric": "^1.13.0",
         "slick-carousel": "1.6.0"
     }
