--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -19,3 +19,8 @@ services:
             - '%shopsys.framework.root_dir%'
 
     Shopsys\FrameworkBundle\Command\RecalculationsCommand: '@App\Command\RecalculationsCommand'
+
+    App\Command\Migrations\ImportLegacyCustomersFromCSVCommand:
+        arguments:
+            $shopsysVarDirPath: '%shopsys.var_dir%'
+
