When a product in product group doesn't have prices for selected domain whole product group is hidden.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -653,3 +653,5 @@ services:
             $translationEnabled: '%google_translate_enabled%'
 
     Shopsys\FrameworkBundle\Model\Product\Availability\AvailabilityFacade: '@App\Model\Product\Availability\AvailabilityFacade'
+
+    Shopsys\FrameworkBundle\Model\Product\ProductVisibilityRepository: '@App\Model\Product\ProductVisibilityRepository'
