[TF-320] Migration - added superadmin page for migrations csv
- temporary page, will be removed after processed migrations

--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -22,5 +22,5 @@ services:
 
     App\Command\Migrations\ImportLegacyCustomersFromCSVCommand:
         arguments:
-            $shopsysVarDirPath: '%shopsys.var_dir%'
+            $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
 
