--- a/config/directories.yaml
+++ b/config/directories.yaml
@@ -1,3 +1,4 @@
 parameters:
     public_directories:
+        - '/web/%shopsys.content_dir_name%/uploadedFiles/migrations'
     internal_directories:
