--- a/config/paths.yaml
+++ b/config/paths.yaml
@@ -33,4 +33,4 @@ parameters:
     shopsys.data_fixtures_images.resources_dir: '%shopsys.data_fixtures.resources_dir%/images/'
     shopsys.elasticsearch.structure_dir: '%shopsys.resources_dir%/definition/'
     shopsys.json_entrypoints_path: '%kernel.project_dir%/web/build/entrypoints.json'
-    shopsys.var_dir: '%shopsys.root_dir%/var'
+    shopsys.migrations_dir: '%shopsys.web_dir%/%shopsys.content_dir_name%/uploadedFiles/migrations'
