--- a/config/services.yaml
+++ b/config/services.yaml
@@ -720,3 +720,7 @@ services:
     Shopsys\FrameworkBundle\Model\Transport\TransportPriceCalculation: '@App\Model\Transport\TransportPriceCalculation'
 
     Shopsys\ReadModelBundle\Image\ImageViewFactory: '@App\Model\Image\ImageViewFactory'
+
+    App\Controller\Admin\SuperadminController:
+        arguments:
+            $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
