Added attributes to product domains that replace hidden attributes on original product.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -636,6 +636,8 @@ services:
 
     Shopsys\FrameworkBundle\Model\Product\Availability\AvailabilityFacade: '@App\Model\Product\Availability\AvailabilityFacade'
 
+    Shopsys\FrameworkBundle\Model\Product\ProductHiddenRecalculator: '@App\Model\Product\ProductHiddenRecalculator'
+
     Shopsys\FrameworkBundle\Model\Product\ProductVisibilityRepository: '@App\Model\Product\ProductVisibilityRepository'
 
     App\Model\Mail\MailTemplateConfiguration:
