Added news category which is automatically populated by products with news flag.

--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -114,6 +114,7 @@ parameters:
             - '*/src/Model/Cart/CartFacade.php'
             - '*/src/Controller/Front/OrderController.php'
             - '*/src/DataFixtures/Demo/ProductDataFixture.php'
+            - '*/src/DataFixtures/Demo/CategoryDataFixture.php'
             - '*/src/Model/Product/Pricing/ProductPriceCalculation.php'
             - '*/src/Model/Cart/CartFacade.php'
 
