--- a/config/images.yaml
+++ b/config/images.yaml
@@ -47,7 +47,12 @@
             width: 70
             height: 70
             crop: false
-            occurrence: 'Dropdown menu in header'
+            occurrence: 'Front-end: Dropdown menu in header'
+        -   name: preList
+            width: 160
+            height: 160
+            crop: false
+            occurrence: 'Front-end: Images for prelist categories'
 
 -   name: product
     class: Shopsys\FrameworkBundle\Model\Product\Product
