--- a/config/parameters.yaml.dist
+++ b/config/parameters.yaml.dist
@@ -110,3 +110,25 @@ parameters:
     ecomail_list_id_sk: 3
 
     env(CDN_DOMAIN): '//'
+
+    cofidis_config:
+        cs:
+            merchant_id: 15002
+            login: NESS
+            cofisun_pass: F3C0K54C
+            inbound_pass: password
+            outbound_pass: password
+        sk:
+            merchant_id: 15002
+            login: NESS
+            cofisun_pass: F3C0K54C
+            inbound_pass: password
+            outbound_pass: password
+        en:
+            merchant_id: 15002
+            login: NESS
+            cofisun_pass: F3C0K54C
+            inbound_pass: password
+            outbound_pass: password
+        isProductionMode: false
+        timeout: 30
